# hmmclassifier

./: pyproject.toml
hmmclassifier/: HMMClassifier.py  __init__.py  misc.py
