[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hmmclassifier"
version = "0.1.0"
description = "Simple HMM-based gesture recognition"
dependencies = [
    "numpy",
    "hmmlearn"
]
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["."]